--- a/src/app/home/BannerSlider.css
+++ b/src/app/home/BannerSlider.css
@@ -7,7 +7,7 @@
 .slider-content p {
   font-weight: bolder;
   color: #fff;
-  font-size: 60px;
+  font-size: 53px;
 }
 .carousel-caption {
   width: 45%;
@@ -30,7 +30,7 @@
 .slider-content {
   text-align: left;
   color: #fff; /* or light yellow */
-  text-shadow: 1px 1px 2px black; 
+  text-shadow: 1px 1px 2px black;
   /* background:  rgba(173, 216, 230, 0.8);  */
   /* background: rgba(0, 50, 100, 0.8); */
   background-color: rgba(0, 50, 100, 0.1);
@@ -44,7 +44,40 @@
 .carousel-caption {
   width: 50%;
   right: 0% !important;
-  top: 8%;
-  left: 51% ;
+  top: 11%;
+  left: 50%;
 }
 
+/* Responsive */
+
+@media screen and (max-width: 1199px) {
+  .slider-content h3 {
+    font-size: 43px;
+  }
+}
+@media screen and (max-width: 979px) {
+  .slider-content h3 {
+    font-size: 33px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .slider-content h3 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  .slider-content p{
+    font-size: 18px;
+  }
+  .carousel-caption{
+    width: 80% !important;
+    left: 0% !important;
+  }
+  .slider-container {
+    padding: 0 25px !important;
+  }
+  .img-slide {
+    height: 500px;
+  }
+  
+
+}
