--- a/src/components/getintouch.css
+++ b/src/components/getintouch.css
@@ -7,7 +7,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position-x: center;
-    width: 100%;
+    max-width: 100%;
     height: 635px;
   }
   .bottom-cta .bottom-cta-text {
@@ -40,4 +40,20 @@
     text-align: center;
     font-weight: 700;
     text-decoration: none;
+  }
+
+
+  /*  Responsive  */
+  @media screen and (max-width: 1199px){
+    .bottom-cta {
+      height: 500px !important;
+    }
+  }
+  
+
+
+  @media screen and (max-width:979px) {
+    .bottom-cta {
+      height: 365px !important;
+    }
   }
