--- a/src/moderncomponents/footer.css
+++ b/src/moderncomponents/footer.css
@@ -49,7 +49,7 @@ footer{
 .asterisk{
     color: red;
 }
-.footer-signup button,.footer-address button{
+.footer-contact-btn,.footer-address button{
     display: block;
     background-color: #ffd166;
     padding: 10px 40px;
@@ -59,8 +59,11 @@ footer{
     margin-top: 10px;
     font-weight: bolder;
 }
-.footer-signup button:hover,.footer-address button:hover{
+.footer-contact-btn:hover,.footer-address button:hover{
     background-color: #33526f;
+}
+.footer-contact-btn{
+    width: 180px;
 }
 .footer-address{
     margin-left: 24px;
@@ -107,4 +110,47 @@ footer{
     position: absolute;
     left: 9%;
     top: 8%;
+}
+
+
+/* Responsive */
+
+@media screen and (max-width:1199px) {
+    .footer-content{
+        width: 100%;
+    }
+    .footerlogo{
+        max-width: 90% !important;
+    }
+}
+@media screen and (max-width: 979px) {
+    .footer-heading{
+        font-size: 25px !important;
+    }
+    footer {
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer-inner-content{
+        display: block;
+        text-align: center;
+    }
+    .footer-address {
+        text-align: center;
+        margin-top: 10px;
+        margin-left: 0;
+        width: 100%;
+    }
+    .footer-signup button, .footer-address button {
+        margin: 10px auto;
+    }
+    .footer-signup,.footer-address{
+        margin-bottom: 25px;
+    }
+    .social-icons-icon{
+        margin: 10px auto !important;
+        margin-right: 10px !important;
+    }
 }
