--- a/src/moderncomponents/navbar.css
+++ b/src/moderncomponents/navbar.css
@@ -1,91 +1,89 @@
-header{
+header {
   position: fixed;
   z-index: 6;
   width: 100%;
 }
 
-.header-content{
-    background-color: #394B62;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    position: relative;
+.header-content {
+  background-color: #394b62;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  position: relative;
 }
-.nav-bar-list{
+.nav-bar-list {
   margin-right: 0;
 }
 
-.nav-bar-list ul{
-    list-style: none;
+.nav-bar-list ul {
+  list-style: none;
 }
-.nav-bar-list ul li{
-    display: inline-block;
-    font-size: 18px;
-    line-height: 1.3em;
-    color: #fff;
-    font-weight: 700;
-    text-transform: uppercase;
+.nav-bar-list ul li {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 1.3em;
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
 }
-.nav-bar-list ul li a{
-    text-decoration: none;
-    padding: 10px 0;
+.nav-bar-list ul li a {
+  text-decoration: none;
+  padding: 10px 0;
 }
-.search-icon{
-    color: #333;
-    cursor: pointer;
-    display: none;
+.search-icon {
+  color: #333;
+  cursor: pointer;
+  display: none;
 }
-#myDIV{
-    display: none;
+#myDIV {
+  display: none;
 }
-#myDIV input{
-    outline: none;
-    padding: 10px;
-    position: absolute;
-    bottom: -50%;
-    right: 5%;
-    z-index: 5;
+#myDIV input {
+  outline: none;
+  padding: 10px;
+  position: absolute;
+  bottom: -50%;
+  right: 5%;
+  z-index: 5;
 }
 .fixed {
   position: sticky;
   top: 0;
   z-index: 777;
 }
-.logo{
+.logo {
   display: flex;
   align-items: center;
   margin-right: 30%;
 }
-.logo2{
+.logo2 {
   width: 200px;
 }
-.list-item:hover{
+.list-item:hover {
   color: #ffd166;
 }
-.talk{
-    text-transform: uppercase;
-    background-color: #ffd166;
-    color: #fff;
-    font-weight: 800;
-    padding: 10px;
-    border-radius: 50px;
-    text-align: center;
-    cursor: pointer;
-    border: none;
+.talk {
+  text-transform: uppercase;
+  background-color: #ffd166;
+  color: #fff;
+  font-weight: 800;
+  padding: 10px;
+  border-radius: 50px;
+  text-align: center;
+  cursor: pointer;
+  border: none;
 }
-.talk:hover{
-    background-color: #33526f;
+.talk:hover {
+  background-color: #33526f;
 }
 
 @media screen and (max-width: 1199px) {
-  
-
-  .header-content,.logo{
+  .header-content,
+  .logo {
     display: block;
-
   }
-  .logo{
+  .logo {
     margin-right: 0;
     display: inline-block;
   }
@@ -94,7 +92,6 @@ header{
     margin-top: 41px;
     text-align: center;
     margin-bottom: 40px;
-   
   }
   .ham_menu {
     display: block;
@@ -104,7 +101,6 @@ header{
   .button_content li {
     margin: 0;
   }
-
 
   .navbar {
     display: block;
@@ -140,27 +136,25 @@ header{
   .change .bar3 {
     transform: translate(0, -8px) rotate(45deg);
   }
-  .nav-bar-list ul li{
+  .nav-bar-list ul li {
     display: block !important;
   }
-  .nav-bar-list ul li{
+  .nav-bar-list ul li {
     padding: 5px 0;
     margin-left: 0;
     margin: 0 auto;
   }
-  .talk{
+  .talk {
     max-width: 20%;
     margin-top: 10px !important;
   }
-  .dropdown-content{
+  .dropdown-content {
     left: -54% !important;
   }
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .talk {
     max-width: 50%;
   }
 }
-
-
