--- a/src/app/about/About.css
+++ b/src/app/about/About.css
@@ -1,359 +1,50 @@
-.page-banner.electrum-banner {
-  position: relative;
-  /* background-image: url(../../../public/images/page-banner-background.png); */
-  width: 100%;
-  height: auto;
-  min-height: 658px;
-  background-position-x: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+.quotes-info {
+  padding-top: 8%;
+  background-color: #e9f5f6;
 }
-.banner-overlay {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-}
-.banner-overlay img {
-  width: 81%;
-  height: 509px;
-  position: absolute;
-  /* top: 30%; */
-  right: 11%;
-  margin-top: 10%;
-  /* transform: translate(-50%,-50%); */
-}
-.featured-img-div {
-  /* background-image: url(../../../public/images/page-example.png); */
-  background-size: cover;
-  background-position-x: center;
-  background-repeat: no-repeat;
-  z-index: 2;
-  width: 966px;
-  height: 543px;
-  margin: 0 auto;
-  position: relative;
-  bottom: -271.5px;
-}
-.about-banner-text {
-  z-index: 2;
-  width: 100%;
-  text-align: center;
-  position: relative;
-  top: 120px;
-}
-.about-banner-text .banner-title {
-  width: 80%;
-  margin: 0 auto 30px auto;
-  text-align: center;
-}
-.about-banner-text .banner-title h1 {
-  font-size: 80px;
-  font-weight: bolder;
-  color: #fff;
-  text-transform: uppercase;
-  margin: 0;
-}
-.about-banner-text .banner-text {
-  width: 35%;
-  margin: 0 auto;
-  text-align: center;
-}
-.about-banner-text .banner-text p {
-  font-size: 29px;
-  font-weight: bold;
-  color: #fff;
-  margin: 0;
-}
-
-.electrum-about .our-story {
-  background: #fff;
-  max-height: 500px;
-}
-.electrum-about .our-story .our-story-container {
-  position: relative;
-  width: 40%;
-  margin: 0 auto;
-}
-.electrum-about .our-story .our-story-container .story-info {
-  position: relative;
-  padding: 30px;
-}
-.electrum-about .our-story .our-story-container .story-info h2 {
-  font-weight: 700;
-  font-size: 56px;
-  color: #394a62;
-  margin-bottom: 45px;
-}
-.electrum-about .our-story .our-story-container .story-info p {
-  font-weight: bolder;
-  font-size: 20px;
-  color: #000;
-  margin-bottom: 15px;
-}
-.electrum-about .our-story .our-story-container .story-imgs {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 30px;
-  margin: 0 auto;
-  bottom: 0;
-  width: 100%;
-  z-index: 2;
-}
-.electrum-about .our-story .our-story-container .story-imgs .story-inner-img {
-  width: 50%;
-  height: auto;
-  border-radius: 6px;
-}
-.electrum-about .quotes-info {
-  position: relative;
-  background-image: url(../../../public/images/about-page-geometry.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  min-height: 800px;
-  width: 100%;
-}
-.electrum-about .quotes-info .info-div {
-  width: 50%;
-  margin: 0 auto;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-}
-.electrum-about .quotes-info .info-div .info {
-  border-left: 1px solid #f2d499;
-  padding-left: 15px;
-  margin-top: 15px;
-}
-.electrum-about .quotes-info .info-div .info p {
-  font-weight: bolder;
-  font-size: 30px;
-  color: #000;
-}
-.electrum-about .quotes-info .info-div .info-stats {
-  display: flex;
-  gap: 60px;
-  width: 100%;
-}
-.electrum-about .quotes-info .info-div .info-stats .stat {
-  padding: 30px;
-  text-align: center;
-}
-.electrum-about .quotes-info .info-div .info-stats .stat h3,
-.electrum-about .quotes-info .info-div .info-stats .stat p {
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.electrum-about .quotes-info .info-div .info-stats .stat h3 {
-  font-size: 56px;
-  color: #dda94e;
-  margin-bottom: 15px;
-}
-.electrum-about .quotes-info .info-div .info-stats .stat p {
-  font-size: 16px;
-  color: #394a62;
-}
-.electrum-about .about-icons {
-  position: relative;
-  width: 50%;
-  background: #fff;
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
-  align-items: center;
-  gap: 60px;
-  min-height: 850px;
-}
-.electrum-about .about-icons .icons,
-.electrum-about .about-icons .icons-title {
-  width: 50%;
-}
-.electrum-about .about-icons .icons-title h2 {
-  font-size: 40px;
-  color: #394a62;
-  font-weight: 700;
-  margin: 20px 0;
-}
-.electrum-about .about-icons .icons {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-row: auto auto;
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
-}
-.electrum-about .about-icons .icons .icon-div img {
-  width: 90px;
-  height: 90px;
-}
-.electrum-about .about-icons .icons .icon-div h3,
-.electrum-about .about-icons .icons .icon-div p {
-  font-size: 16px;
-}
-.electrum-about .about-icons .icons .icon-div h3 {
-  text-transform: uppercase;
-  font-weight: 700;
-  color: #394a62;
-  margin: 10px 0;
-}
-.electrum-about .about-icons .icons .icon-div p {
-  font-weight: 300;
-  color: #333;
-}
-.electrum-about .about-bottom-banner {
-  width: 100%;
-  min-height: 850px;
-  margin-bottom: -25vh;
-  position: relative;
-  background-image: url(../../../public/images/about-bottom-bg.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  display: flex;
-}
-.electrum-about .about-bottom-banner .about-bg {
-  display: none;
-  background-image: url(../../../public/images/about-mobile-bottom.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-}
-.electrum-about .about-bottom-banner .bottom-banner-text {
-  position: absolute;
-  top: 50%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-}
-.electrum-about .about-bottom-banner .bottom-banner-text h3 {
-  font-size: 45px;
-  font-weight: 700;
-  color: #394a62;
-  margin-bottom: 30px;
-  text-transform: capitalize;
-}
-.electrum-about .about-bottom-banner .bottom-banner-text p {
-  font-weight: 700;
-  font-size: 20px;
-  color: #333;
-  margin-bottom: 60px;
-}
-.electrum-about .about-bottom-banner .about-bottom-links {
-  width: 60%;
-}
-.electrum-about .about-bottom-banner .about-bottom-links a {
-  display: block;
-  font-weight: lighter;
-  font-size: 20px;
-  margin-bottom: 30px;
-}
-
-.bottom-cta {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  background-image: url(../../../public/images/single-banner.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position-x: center;
-  width: 100%;
-  height: 635px;
-}
-
-.bottom-cta .bottom-cta-text {
-  text-align: center;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 3;
-  background: 0 0;
-}
-.bottom-cta .bottom-cta-text h2 {
-  font-size: 40px;
-  color: #fff;
-  font-weight: 700;
-  margin-bottom: 45px;
-}
-.home-cta-btn {
-  border-radius: 6px;
-  text-transform: uppercase;
-  font-size: 16px;
-  color: black;
-  background-color: #ffd166;
-  max-width: 152px;
-  max-height: 58px;
-  padding: 15px 20px;
-  display: block;
-  margin: 0 auto;
-  text-decoration: none;
-  text-align: center;
-  font-weight: 700;
-}
-
-.testimonials-div {
-  width: 100%;
-  padding-left: 0;
-  padding-right: 0;
-  background: #fff;
-  position: relative;
-}
-/* .testimonials-div .poly-top {
-  position: absolute;
-  top: -56%;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  height: auto;
-} */
-.testimonials-div .advantage-div {
-  padding: 50px 0;
-  z-index: 1;
-  text-align: center;
-  margin-top: 0 !important;
-  margin-bottom: 0 !important;
-}
-.testimonials-div .advantage-content {
-  width: 100%;
-}
-
-.testimonials-div .advantage-div h2 {
-  font-size: 40px;
-  font-weight: 700;
-  color: #394a62;
-  margin-bottom: 30px;
-}
-.testimonials-div .advantage-div .advantage-info {
-  text-align: center;
-}
-.testimonials-div .advantage-div .advantage-info h3 {
-  text-transform: uppercase;
-  color: #394a62;
-  font-weight: bolder;
-  font-size: 22px;
-}
-.testimonials-div .advantage-div .advantage-info p {
-  color: #333;
-  font-size: 20px;
-  font-weight: 700;
-}
-.testimonial-logos {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 80%;
+.container {
+  width: 800px;
   margin: 0 auto;
 }
 .mission-heading {
   font-size: 56px;
   font-weight: 700;
   color: #394a62;
-  margin-bottom: 15%;
+  margin: 0 auto;
+  margin-bottom: 7%;
+  text-align: center;
+}
+.info p {
+  font-weight: bolder;
+  font-size: 30px;
+  color: #000;
+  padding-bottom: 15%;
+  margin: 0 auto;
+}
+.info-div {
+  text-align: center;
+}
+.story-info {
+  text-align: center;
+  padding: 50px 0;
+}
+.story-info h2 {
+  font-weight: 700;
+  font-size: 56px;
+  color: #394a62;
+  margin-bottom: 45px;
+}
+.story-info p {
+  font-weight: bolder;
+  font-size: 20px;
+  color: #000;
+  margin-bottom: 15px;
+}
+.story-imgs {
+  display: flex;
+}
+.story-inner-img {
+  width: 390px;
 }
 .leadership-section {
   padding: 50px 0;
@@ -365,213 +56,63 @@
   color: #394a62;
   margin-bottom: 30px;
 }
-.leadership-main-content{
+.leadership-main-content {
   display: flex;
   justify-content: space-around;
 }
-.leadership-inner-content h4{
+.leadership-inner-content h4 {
   font-size: 30px;
 }
-.leadership-inner-content p{
+.leadership-inner-content p {
   font-size: 20px;
 }
 
 /* Responsive */
 
-@media screen and (max-width: 1200px) {
-  .featured-img-div {
-    width: 669px;
-    height: 375px;
-    bottom: -187.5px;
+@media screen and (max-width: 1199px) {
+  .bottom-cta {
+    height: 500px !important;
   }
-  .page-banner-text {
-    top: 100px;
-  }
-  .page-banner-text .banner-title {
-    width: 100%;
-  }
-  .page-banner-text .banner-text {
-    width: 50%;
-  }
-}
-.electrum-about .our-story {
-  width: 50%;
-  max-height: 600px;
-  margin: 0 auto;
-  text-align: center;
-  margin-bottom: 10%;
 }
 
-.electrum-about .our-story .our-story-container {
-  width: 100%;
-  min-height: 600px;
-}
-.electrum-about .our-story .our-story-container .story-info {
-  margin: 0 auto;
-}
-.electrum-about .our-story .our-story-container .story-imgs {
-  position: absolute;
-  display: flex;
-  gap: 10px;
-  left: 50%;
-  bottom: -24%;
-  transform: translateX(-50%);
-  width: 100%;
-  z-index: 2;
-}
-.electrum-about .our-story .our-story-container .story-imgs img {
-  width: 50%;
-  height: auto;
-  border-radius: 6px;
-}
-.electrum-about .quotes-info {
-  min-height: 600px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.electrum-about .quotes-info .info-div {
-  margin-top: 60px;
-  width: 75%;
-}
-.electrum-about .quotes-info .info-div .info-stats {
-  gap: 30px;
-}
-.electrum-about .about-icons {
-  width: 75%;
-  display: block;
-  margin-top: 60px;
-  min-height: 700px;
-}
-.electrum-about .about-icons .icons-title {
-  margin-bottom: 60px;
-  width: 43%;
-  margin: 0 auto;
-  margin-bottom: 30px;
-}
-.electrum-about .about-icons .icons {
-  width: 100%;
-}
-.icons .icon-div {
-  text-align: center;
-}
-.icons .icon-div div img {
-  margin: 0 auto;
-}
-.electrum-about .about-bottom-banner {
-  background: #f2f5f8;
-  background-image: none;
-  min-height: 1200px;
-}
-.electrum-about .about-bottom-banner .about-bg {
-  display: block;
-  width: 100%;
-  min-height: 470px;
-}
-.electrum-about .about-bottom-banner .bottom-banner-text {
-  position: initial;
-  width: 75%;
-  text-align: center;
-  margin: 20% 10% 0 10%;
-  transform: none;
-  text-align: left;
-}
-.electrum-about .about-bottom-banner .about-bottom-links {
-  width: 75%;
+@media screen and (max-width: 979px) {
+  .bottom-cta {
+    height: 365px !important;
+  }
+  .story-inner-img {
+    width: 375px;
+  }
+  .mission-heading {
+    font-size: 52px;
+  }
+  .info p {
+    font-size: 29px;
+  }
 }
 
-@media screen and (max-width: 700px) {
-  .page-banner-text {
-    top: 90px;
+@media screen and (max-width: 767px) {
+  
+  .container {
+    width: 96%;
   }
-  .page-banner.electrum-banner {
-    min-height: 550px;
+  .quotes-info {
+    padding-top: 26%;
   }
-  .banner-overlay {
-    min-height: 550px;
-  }
-  .featured-img-div {
-    width: 400px;
-    height: 225px;
-    bottom: -112.5px;
-  }
-  .page-banner-text .banner-text {
-    width: 60%;
-  }
-
-  .electrum-about .our-story {
-    margin-top: 95px;
-    max-height: 1000px;
-  }
-  .electrum-about .our-story .our-story-container {
-    min-height: 900px;
-  }
-  .electrum-about .our-story .our-story-container .story-info {
-    text-align: center;
-    margin-bottom: 60px;
-  }
-  .electrum-about .our-story .our-story-container .story-imgs {
+  .leadership-main-content,
+  .story-imgs {
     display: block;
-    bottom: -30vh;
   }
-  .electrum-about .our-story .our-story-container .story-imgs img {
-    width: 75%;
-    height: auto;
-    border-radius: 6px;
-    float: right;
-  }
-  .electrum-about .our-story .our-story-container .story-imgs img:first-child {
-    float: left;
-  }
-  .electrum-about .quotes-info {
-    min-height: 1400px;
-  }
-  .electrum-about .quotes-info .info-div {
-    margin-top: 90px;
-  }
-  .electrum-about .quotes-info .info-div .info-stats {
-    display: block;
-    text-align: center;
-    width: 75%;
+  .story-inner-img {
+    max-width: 100% !important;
     margin: 0 auto;
   }
-  .electrum-about .about-icons {
-    min-height: 1000px;
+  .leadership-inner-content {
+    margin-bottom: 20px;
   }
-  .electrum-about .about-icons .icons {
-    display: block;
+  .info p {
+    font-size: 21px;
   }
-  .electrum-about .about-icons .icons .icon-div {
-    display: flex;
-    gap: 30px;
-    margin-bottom: 60px;
-  }
-  .electrum-about .about-icons .icons-title {
-    width: 75%;
-  }
-}
-@media screen and (max-width: 500px) {
-  .page-banner-text {
-    top: 75px;
-  }
-  .page-banner.electrum-banner {
-    min-height: 500px;
-  }
-  .banner-overlay {
-    min-height: 500px;
-  }
-  .page-banner-text .banner-text {
-    width: 90%;
-  }
-  @media screen and (max-width: 450px) {
-    .electrum-about .quotes-info {
-      min-height: 1800px;
-    }
-    .electrum-about .quotes-info .info-div {
-      margin-top: 15px;
-    }
-    .electrum-about .about-icons .icons-title {
-      width: 100%;
-    }
+  .mission-heading {
+    font-size: 40px;
   }
 }
