--- a/src/app/multiunitresidential/multiprojects.css
+++ b/src/app/multiunitresidential/multiprojects.css
@@ -1,41 +1,42 @@
-.multi-project{
-    padding: 50px 0;
+.multi-project {
+  padding: 50px 0;
 }
-.multi-project-inner-content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 50px;
-    padding: 20px 0;
+.multi-project-inner-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 50px;
+  padding: 20px 0;
 }
-.project-heading{
-    font-size: 40px;
-    font-weight: 700;
-    color: #394a62;
-    text-align: center;
-    margin-bottom: 45px;
+.project-heading {
+  font-size: 40px;
+  font-weight: 700;
+  color: #394a62;
+  text-align: center;
+  margin-bottom: 45px;
 }
-.project-inner-heading{
-    color: #394a62;
+.project-inner-heading {
+  color: #394a62;
 }
-.multi-left-content{
-    width: 50%;
-    font-size: 22px;
-    margin-right: 37px;
+.multi-left-content {
+  width: 50%;
+  font-size: 22px;
+  margin-right: 37px;
 }
-.multi-left-content ul li{
-    list-style-type: square;
-    margin-top: 20px;
+.multi-left-content ul li {
+  list-style-type: square;
+  margin-top: 20px;
 }
-.chargers{
-    color: #212529;
-    font-weight: 300;
+.chargers {
+  color: #212529;
+  font-weight: 300;
 }
-.multi-image{
-    width: 750px;
+.multi-image {
+  width: 750px;
 }
-.multi-left-content,.multi-inner-heading.chargers{
-    font-size: 22px;
-    font-weight: 600;
-    color: #333;
+.multi-left-content,
+.multi-inner-heading.chargers {
+  font-size: 22px;
+  font-weight: 600;
+  color: #333;
 }
